--- a/templates/user/my_orders.html
+++ b/templates/user/my_orders.html
@@ -2,7 +2,7 @@
 {% block title %}My Orders{% endblock %}
 
 {% block content %}
-
+<div class="center-wrapper">
 <div class="orders-container">
 
     <h2 class="page-title text-center">📦 My Orders</h2>
@@ -39,5 +39,5 @@
     {% endfor %}
 
 </div>
-
+</div>
 {% endblock %}
