--- a/templates/user/my_orders.html
+++ b/templates/user/my_orders.html
@@ -2,7 +2,7 @@
 {% block title %}My Orders{% endblock %}
 
 {% block content %}
-<div class="center-wrapper">
+<div class="card">
 <div class="orders-container">
 
     <h2 class="page-title text-center">📦 My Orders</h2>
