--- a/templates/user/product_details.html
+++ b/templates/user/product_details.html
@@ -2,7 +2,6 @@
 {% block title %}Product Details{% endblock %}
 
 {% block content %}
-<div class="center-wrapper">
 <div class="card">
 <div class="details-container">
 
@@ -22,5 +21,5 @@
     <a href="/user-home" class="btn">Back to Dashboard</a>
 
 </div>
-</div></div>
+</div>
 {% endblock %}
