--- a/templates/user/cart.html
+++ b/templates/user/cart.html
@@ -2,8 +2,8 @@
 {% block title %}Your Cart{% endblock %}
 
 {% block content %}
-
-<div class="cart-container"><br>
+<center>
+<div class="cart-container">
 
     <h2 class="cart-title">My Cart</h2><br>
 
@@ -100,5 +100,5 @@
 
     {% endif %}
 
-</div>
+</div></center>
 {% endblock %}
