--- a/templates/user/cart.html
+++ b/templates/user/cart.html
@@ -2,9 +2,9 @@
 {% block title %}Your Cart{% endblock %}
 
 {% block content %}
-<center>
-<div class="cart-container">
 
+<div class="cart-container">
+<center>
     <h2 class="cart-title">My Cart</h2><br>
 
     <!-- FLASH MESSAGES -->
@@ -99,6 +99,6 @@
     </div>
 
     {% endif %}
-
-</div></center>
+</center>
+</div>
 {% endblock %}
