--- a/templates/user/cart.html
+++ b/templates/user/cart.html
@@ -5,7 +5,7 @@
 
 <div class="cart-container">
 <center>
-    <h2 class="cart-title">My Cart</h2><br>
+    <h2 class="cart-title">My Cart</h2></center><br>
 
     <!-- FLASH MESSAGES -->
     {% with messages = get_flashed_messages(with_categories=true) %}
@@ -99,6 +99,6 @@
     </div>
 
     {% endif %}
-</center>
+
 </div>
 {% endblock %}
