--- a/templates/user/cart.html
+++ b/templates/user/cart.html
@@ -2,10 +2,9 @@
 {% block title %}Your Cart{% endblock %}
 
 {% block content %}
-
+<div class="center-wrapper">
 <div class="cart-container">
-<center>
-    <h2 class="cart-title">My Cart</h2></center><br>
+    <h2 class="cart-title">My Cart</h2><br>
 
     <!-- FLASH MESSAGES -->
     {% with messages = get_flashed_messages(with_categories=true) %}
@@ -99,6 +98,6 @@
     </div>
 
     {% endif %}
-
+</div>
 </div>
 {% endblock %}
